# Phase

./: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  generators.py  python_generators.py
perft/: CMakeLists.txt  perftdriver.cpp
src/: main.cpp
src/book/: book.cpp  book.hpp
src/evaluator/: evaluator.cpp  evaluator.hpp
src/game/: board.hpp  manager.cpp  manager.hpp  moves.cpp  moves.hpp  types.hpp
src/search/: search.cpp  search.hpp  transposition.cpp  transposition.hpp
src/uci/: time_manager.cpp  time_manager.hpp  uci.cpp  uci.hpp  util.hpp
src/util/: cli.cpp  cli.hpp  constants.hpp  global.cpp  global.hpp  initializers.cpp  initializers.hpp  lookup.cpp  lookup.hpp  magicbitboard.cpp  magicbitboards.cpp  magicbitboards.hpp  magicgen.cpp  magicgen.hpp  tables.hpp  util.cpp  util.hpp  zobrist.cpp  zobrist.hpp
test/: CMakeLists.txt
test/fixtures/: sample_fixture.cpp
test/src/: main_test.cpp
test/src/util/: util_test.cpp
test/src_test/: main_test.cpp  transposition_test.cpp  zobrist_test.cpp
test/src_test/util_test/: magicgen.cpp  tables_test.cpp
uci_build/: Phase0.00001  Phase0.01  Phase0.1
